--- a/index.html
+++ b/index.html
@@ -1,89 +1,28 @@
 <!DOCTYPE html>
 <html lang="hi">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>प्रमाण पत्र जनरेटर</title>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Devanagari&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: "Noto Sans Devanagari", sans-serif;
-      text-align: center;
-      background: #f8f8f8;
-    }
-    .input-section { margin: 20px; }
-    .certificate {
-      position: relative;
-      width: 800px;
-      height: 600px;
-      margin: 20px auto;
-      display: none;
-      border: 4px solid #d4af37;
-      background: url("https://egovlabksj.github.io/crt-generator/certificate-bg11.png") no-repeat center center;
-      background-size: cover;
-      image-rendering: crisp-edges;
-    }
-    .header-text {
-      position: absolute;
-      top: 150px;
-      width: 100%;
-      text-align: center;
-      font-size: 20px;
-      font-weight: bold;
-    }
-    .main-title {
-      position: absolute;
-      top: 240px;
-      width: 100%;
-      text-align: center;
-      font-size: 30px;
-      font-weight: bold;
-      color: #0b3d91;
-    }
-    .name-line {
-      position: absolute;
-      top: 280px;
-      width: 100%;
-      text-align: center;
-      font-size: 22px;
-    }
-    .footer-text {
-      position: absolute;
-      bottom: 120px;
-      width: 100%;
-      text-align: center;
-      font-size: 18px;
-    }
-    .ref-no {
-      position: absolute;
-      bottom: 20px;
-      left: 30px;
-      font-size: 14px;
-      color: #000;
-      font-style: italic;
-    }
-    .qr-code {
-      position: absolute;
-      bottom: 20px;
-      right: 30px;
-    }
-    button {
-      margin-top: 10px;
-      padding: 10px 20px;
-      font-size: 16px;
-      background: #0b3d91;
-      color: #fff;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    input {
-      padding: 8px;
-      font-size: 16px;
-      width: 250px;
-      margin: 5px;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>प्रमाण पत्र जनरेटर</title>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Devanagari&display=swap" rel="stylesheet">
+<style>
+body { font-family: "Noto Sans Devanagari", sans-serif; text-align: center; background: #f8f8f8; }
+.input-section { margin: 20px; }
+.certificate {
+  position: relative; width: 800px; height: 600px; margin: 20px auto; display: none;
+  border: 4px solid #d4af37;
+  background: url("https://egovlabksj.github.io/crt-generator/certificate-bg11.png") no-repeat center center;
+  background-size: cover; image-rendering: crisp-edges;
+}
+.header-text { position: absolute; top: 150px; width: 100%; text-align: center; font-size: 20px; font-weight: bold; }
+.main-title { position: absolute; top: 240px; width: 100%; text-align: center; font-size: 30px; font-weight: bold; color: #0b3d91; }
+.name-line { position: absolute; top: 280px; width: 100%; text-align: center; font-size: 22px; }
+.footer-text { position: absolute; bottom: 120px; width: 100%; text-align: center; font-size: 18px; }
+.ref-no { position: absolute; bottom: 20px; left: 30px; font-size: 14px; color: #000; font-style: italic; }
+.qr-code { position: absolute; bottom: 20px; right: 30px; }
+button { margin-top: 10px; padding: 10px 20px; font-size: 16px; background: #0b3d91; color: #fff; border: none; border-radius: 5px; cursor: pointer; }
+input { padding: 8px; font-size: 16px; width: 250px; margin: 5px; }
+</style>
 </head>
 <body>
 
@@ -108,42 +47,54 @@
 
 <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 <script>
-const scriptURL = "https://script.google.com/macros/s/AKfycbzcohePSKpEc64xp7JkuJgzW8IaYXAYfauyqAHR-U3QspIa-Gp5uL_X47vS3eXp2rFQ/exec";
+const scriptURL = "https://script.google.com/macros/s/AKfycbwy4S1MDAJTaKqgMVT1iZQWGYLHZq5ed1GsChYB2Pvxo-eRYDpcKnOu8FpxLmxAbot4/exec";
 
-function generateCertificate() {
+async function generateCertificate() {
   const name = document.getElementById("nameInput").value.trim();
   const mobile = document.getElementById("mobileInput").value.trim();
   const email = document.getElementById("emailInput").value.trim();
 
-  if (!name || !mobile || !email) { 
-    alert("कृपया सभी विवरण भरें।"); 
-    return; 
-  }
+  if (!name || !mobile || !email) { alert("कृपया सभी विवरण भरें।"); return; }
 
   const now = new Date();
   const timestamp = now.getFullYear().toString() +
-                   String(now.getMonth()+1).padStart(2,'0') +
-                   String(now.getDate()).padStart(2,'0') +
-                   String(now.getHours()).padStart(2,'0') +
-                   String(now.getMinutes()).padStart(2,'0') +
-                   String(now.getSeconds()).padStart(2,'0');
+                    String(now.getMonth()+1).padStart(2,'0') +
+                    String(now.getDate()).padStart(2,'0') +
+                    String(now.getHours()).padStart(2,'0') +
+                    String(now.getMinutes()).padStart(2,'0') +
+                    String(now.getSeconds()).padStart(2,'0');
 
   const referenceNo = `${timestamp}/Ksj/CRT`;
   document.getElementById("nameText").textContent = name;
   document.getElementById("refNoText").textContent = "ReferenceNo.-: " + referenceNo;
 
-  // Generate QR code pointing to verification URL
+  // Verification URL (encoded in QR)
   const verificationURL = `https://egovlabksj.github.io/verify?ref=${referenceNo}`;
   const qrImgSrc = `https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=${encodeURIComponent(verificationURL)}&choe=UTF-8`;
-  document.getElementById("qrCodeContainer").innerHTML = `<img src="${qrImgSrc}" width="100" height="100">`;
 
+  // Convert QR image to Base64
+  const qrImgBase64 = await fetch(qrImgSrc)
+    .then(res => res.blob())
+    .then(blob => new Promise(resolve => {
+      const reader = new FileReader();
+      reader.onloadend = () => resolve(reader.result);
+      reader.readAsDataURL(blob);
+    }));
+
+  document.getElementById("qrCodeContainer").innerHTML = `<img src="${qrImgSrc}" width="100" height="100">`;
   document.getElementById("certificate").style.display = "block";
   window.scrollTo(0, document.getElementById("certificate").offsetTop);
 
   // Send data to Google Sheet
   fetch(scriptURL, {
     method: "POST",
-    body: JSON.stringify({ name, mobile, email, referenceNo, verificationURL }),
+    body: JSON.stringify({
+      name: name,
+      mobile: mobile,
+      email: email,
+      qrImgSrc: qrImgSrc,
+      qrImgBase64: qrImgBase64
+    }),
     headers: { "Content-Type": "application/json" },
     mode: 'no-cors'
   })
@@ -161,5 +112,6 @@ async function downloadCertificate() {
   });
 }
 </script>
+
 </body>
 </html>
