--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
 body { font-family: "Noto Sans Devanagari", sans-serif; text-align: center; background: #f8f8f8; }
 .input-section { margin: 20px; }
 .certificate {
-  position: relative; width: 800px; height: 600px; margin: 20px auto; display: none;
+  position: relative;
+  width: 800px;
+  height: 600px;
+  margin: 20px auto;
+  display: none;
   border: 4px solid #d4af37;
-  background: url("https://egovlabksj.github.io/crt-generator/certificate-bg11.png") no-repeat center center;
-  background-size: cover; image-rendering: crisp-edges;
+  background-image: url("https://egovlabksj.github.io/crt-generator/certificate-bg11.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
 }
 .header-text { position: absolute; top: 150px; width: 100%; text-align: center; font-size: 20px; font-weight: bold; }
 .main-title { position: absolute; top: 240px; width: 100%; text-align: center; font-size: 30px; font-weight: bold; color: #0b3d91; }
@@ -47,22 +53,22 @@ input { padding: 8px; font-size: 16px; width: 250px; margin: 5px; }
 
 <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 <script>
-const scriptURL = "https://script.google.com/macros/s/AKfycbwy4S1MDAJTaKqgMVT1iZQWGYLHZq5ed1GsChYB2Pvxo-eRYDpcKnOu8FpxLmxAbot4/exec"; // Replace with your Web App URL
+const scriptURL = "https://script.google.com/macros/s/AKfycbxq6S-miVISvK8cZyhwodU8bm4Z_8qpA1Y78M7oHw2foMn6ylv7SmTe2wF1O43473iM/exec"; // replace with your Apps Script Web App URL
 
 function generateCertificate() {
   const name = document.getElementById("nameInput").value.trim();
   const mobile = document.getElementById("mobileInput").value.trim();
   const email = document.getElementById("emailInput").value.trim();
 
-  if (!name || !mobile || !email) { 
-    alert("कृपया सभी विवरण भरें।"); 
-    return; 
+  if (!name || !mobile || !email) {
+    alert("कृपया सभी विवरण भरें।");
+    return;
   }
 
   // Timestamp and reference
   const now = new Date();
   const timestamp = now.getFullYear().toString() +
-                    String(now.getMonth()+1).padStart(2,'0') +
+                    String(now.getMonth() + 1).padStart(2,'0') +
                     String(now.getDate()).padStart(2,'0') +
                     String(now.getHours()).padStart(2,'0') +
                     String(now.getMinutes()).padStart(2,'0') +
@@ -72,7 +78,7 @@ function generateCertificate() {
   document.getElementById("nameText").textContent = name;
   document.getElementById("refNoText").textContent = "ReferenceNo.-: " + referenceNo;
 
-  // QR code URL (points to verification page)
+  // QR code pointing to verification page
   const verificationURL = `https://egovlabksj.github.io/verify?ref=${referenceNo}`;
   const qrImgSrc = `https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=${encodeURIComponent(verificationURL)}&choe=UTF-8`;
   document.getElementById("qrCodeContainer").innerHTML = `<img src="${qrImgSrc}" width="100" height="100">`;
@@ -93,7 +99,7 @@ function generateCertificate() {
     headers: { "Content-Type": "application/json" },
     mode: 'no-cors'
   })
-  .then(() => console.log("Data Sent"))
+  .then(() => console.log("Data sent to sheet"))
   .catch(err => console.error("Error sending data!", err));
 }
 
