--- a/index.html
+++ b/index.html
@@ -6,28 +6,108 @@
 <title>प्रमाण पत्र जनरेटर</title>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Devanagari&display=swap" rel="stylesheet">
 <style>
-body { font-family: "Noto Sans Devanagari", sans-serif; text-align: center; background: #f8f8f8; }
-.input-section { margin: 20px; }
+body {
+  font-family: "Noto Sans Devanagari", sans-serif;
+  text-align: center;
+  background: #f8f8f8;
+}
+
+.input-section {
+  margin: 20px;
+}
+
 .certificate {
   position: relative;
   width: 800px;
   height: 600px;
   margin: 20px auto;
-  display: none;
   border: 4px solid #d4af37;
-  background-image: url("https://egovlabksj.github.io/crt-generator/certificate-bg11.png");
-  background-repeat: no-repeat;
-  background-position: center center;
+  background: url("https://egovlabksj.github.io/crt-generator/certificate-bg11.png") no-repeat center center;
   background-size: cover;
+  display: none;
+  box-shadow: 0 4px 20px rgba(0,0,0,0.2);
 }
-.header-text { position: absolute; top: 150px; width: 100%; text-align: center; font-size: 20px; font-weight: bold; }
-.main-title { position: absolute; top: 240px; width: 100%; text-align: center; font-size: 30px; font-weight: bold; color: #0b3d91; }
-.name-line { position: absolute; top: 280px; width: 100%; text-align: center; font-size: 22px; }
-.footer-text { position: absolute; bottom: 120px; width: 100%; text-align: center; font-size: 18px; }
-.ref-no { position: absolute; bottom: 20px; left: 30px; font-size: 14px; color: #000; font-style: italic; }
-.qr-code { position: absolute; bottom: 20px; right: 30px; }
-button { margin-top: 10px; padding: 10px 20px; font-size: 16px; background: #0b3d91; color: #fff; border: none; border-radius: 5px; cursor: pointer; }
-input { padding: 8px; font-size: 16px; width: 250px; margin: 5px; }
+
+.certificate * {
+  position: relative;
+  z-index: 2;
+}
+
+.certificate::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: rgba(255,255,255,0.1);
+  z-index: 1;
+}
+
+.header-text {
+  position: absolute;
+  top: 120px;
+  width: 100%;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.main-title {
+  position: absolute;
+  top: 200px;
+  width: 100%;
+  text-align: center;
+  font-size: 32px;
+  font-weight: bold;
+  color: #0b3d91;
+}
+
+.name-line {
+  position: absolute;
+  top: 270px;
+  width: 100%;
+  text-align: center;
+  font-size: 22px;
+}
+
+.footer-text {
+  position: absolute;
+  bottom: 130px;
+  width: 100%;
+  text-align: center;
+  font-size: 18px;
+}
+
+.ref-no {
+  position: absolute;
+  bottom: 20px;
+  left: 30px;
+  font-size: 14px;
+  color: #000;
+  font-style: italic;
+}
+
+.qr-code {
+  position: absolute;
+  bottom: 20px;
+  right: 30px;
+}
+
+button {
+  margin-top: 10px;
+  padding: 10px 20px;
+  font-size: 16px;
+  background: #0b3d91;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+input {
+  padding: 8px;
+  font-size: 16px;
+  width: 250px;
+  margin: 5px;
+}
 </style>
 </head>
 <body>
@@ -53,7 +133,7 @@ input { padding: 8px; font-size: 16px; width: 250px; margin: 5px; }
 
 <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 <script>
-const scriptURL = "https://script.google.com/macros/s/AKfycbxq6S-miVISvK8cZyhwodU8bm4Z_8qpA1Y78M7oHw2foMn6ylv7SmTe2wF1O43473iM/exec"; // Replace with your Apps Script Web App URL
+const scriptURL = "https://script.google.com/macros/s/AKfycbxq6S-miVISvK8cZyhwodU8bm4Z_8qpA1Y78M7oHw2foMn6ylv7SmTe2wF1O43473iM/exec"; // <-- Replace with your Web App URL
 
 async function generateCertificate() {
   const name = document.getElementById("nameInput").value.trim();
@@ -65,10 +145,9 @@ async function generateCertificate() {
     return;
   }
 
-  // Timestamp and reference number
   const now = new Date();
   const timestamp = now.getFullYear().toString() +
-                    String(now.getMonth() + 1).padStart(2,'0') +
+                    String(now.getMonth()+1).padStart(2,'0') +
                     String(now.getDate()).padStart(2,'0') +
                     String(now.getHours()).padStart(2,'0') +
                     String(now.getMinutes()).padStart(2,'0') +
@@ -78,30 +157,22 @@ async function generateCertificate() {
   document.getElementById("nameText").textContent = name;
   document.getElementById("refNoText").textContent = "ReferenceNo.-: " + referenceNo;
 
-  // Generate QR code pointing to verification URL
   const verificationURL = `https://egovlabksj.github.io/verify?ref=${referenceNo}`;
   const qrImgSrc = `https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=${encodeURIComponent(verificationURL)}&choe=UTF-8`;
 
-  // Display QR on certificate
   document.getElementById("qrCodeContainer").innerHTML = `<img src="${qrImgSrc}" width="100" height="100">`;
   document.getElementById("certificate").style.display = "block";
   window.scrollTo(0, document.getElementById("certificate").offsetTop);
 
-  // Send data to Google Sheet
+  // Send to Google Sheet
   fetch(scriptURL, {
     method: "POST",
-    body: JSON.stringify({
-      name: name,
-      mobile: mobile,
-      email: email,
-      qrImgURL: qrImgSrc,
-      timestamp: timestamp
-    }),
+    body: JSON.stringify({ name, mobile, email, qrImgURL: qrImgSrc, timestamp }),
     headers: { "Content-Type": "application/json" },
-    mode: 'no-cors'
+    mode: "cors"
   })
-  .then(() => console.log("Data sent to sheet"))
-  .catch(err => console.error("Error sending data!", err));
+  .then(() => console.log("✅ Data sent to Sheet"))
+  .catch(err => console.error("❌ Error sending data:", err));
 }
 
 function downloadCertificate() {
@@ -109,7 +180,7 @@ function downloadCertificate() {
   html2canvas(cert, { scale: 4, useCORS: true }).then(canvas => {
     const link = document.createElement("a");
     link.download = "certificate.png";
-    link.href = canvas.toDataURL("image/png", 1.0);
+    link.href = canvas.toDataURL("image/png");
     link.click();
   }).catch(err => {
     console.error("Download error:", err);
