--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body {
   height: 600px;
   margin: 20px auto;
   border: 4px solid #d4af37;
-  background: url("https://egovlabksj.github.io/crt-generator/certificate-bg11.png") no-repeat center center;
+  background: url("https://egovlabksj.github.io/crt-generator/certificate-bg11.png.png") no-repeat center center;
   background-size: cover;
   display: none;
   box-shadow: 0 4px 20px rgba(0,0,0,0.2);
@@ -191,3 +191,4 @@ function downloadCertificate() {
 
 </body>
 </html>
+
